[package]
name = "keyz"
version = "1.0.3"
edition = "2021"
description = "keyz client for Rust"
license = "MIT"
repository = "https://github.com/viktor111/keyz"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "time"] }
regex = "1.7.1"
flate2 = "1.0.25"