[package]
name = "keyz"
version = "1.0.4"
edition = "2021"
description = "keyz client for Rust"
license = "MIT"
repository = "https://github.com/viktor111/keyz"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["full", "time"] }
flate2 = "1.1.2"
